--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -1,1 +1,32 @@
-<h1>hola!</h1>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="gadget-navbar">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="row">
+      <div class="col-xs-2 col-xs-offset-1">
+        <div class="navbar-header">
+          <a class="navbar-brand text-center" href="#">
+            <img src="/img/logo_GT_small.png" alt="Gadget">
+          </a>
+        </div>
+      </div>
+      <div class="col-xs-9 gadget-navbar-menu">
+		<ul class="col-xs-4 pull-right menu-social">
+		  <li class="col-xs-offset-2 col-xs-2"><i class="fa fa-twitter"></i></li>
+		  <li class="col-xs-2"><i class="fa fa-facebook-official"></i></li>
+		  <li class="col-xs-2"><i class="fa fa-instagram"></i></li>
+		  <li class="col-xs-4 text-center">es</li>
+		</ul>
+      </div>
+    </div>
+	<div class="row">
+		<ul class="col-xs-6 gadget-dropdown-menu gadget-dropdown-menu-container pull-right">
+		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-it"></li>
+		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-networking"></li>
+		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-surveillance"></li>
+		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-audio"></li>
+		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-automation"></li>
+		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-contact"></li>
+		</ul>
+	</div>
+  </div><!-- /.container-fluid -->
+</nav>
