--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -19,13 +19,34 @@
       </div>
     </div>
 	<div class="row">
-		<ul class="col-xs-6 gadget-dropdown-menu gadget-dropdown-menu-container pull-right">
-		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-it"></li>
-		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-networking"></li>
-		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-surveillance"></li>
-		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-audio"></li>
-		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-automation"></li>
-		  <li class="col-xs-2 gadget-dropdown-menu gadget-dropdown-menu-contact"></li>
+		<ul class="gadget-dropdown-menu gadget-dropdown-menu-container pull-right">
+		  <li class="gadget-dropdown-menu-it">
+		  	<span>IT Services &amp; Support</span>
+		  	<ul>
+		  		<li><span>Service Desk</span></li>
+		  		<li><span>Outsourcing</span></li>
+	  		</ul>
+		  </li>
+		  <li class="gadget-dropdown-menu-networking">
+		  	<span>Networking</span>
+		  </li>
+		  <li class="gadget-dropdown-menu-surveillance">
+			<span>Surveillance Cameras</span>
+		  </li>
+		  <li class="gadget-dropdown-menu-audio">
+		  	<span>Audio &amp; Video</span>
+		  </li>
+		  <li class="gadget-dropdown-menu-automation">
+		  	<span>Automation</span>
+		  </li>
+		  <li class="gadget-dropdown-menu-contact">
+		  	<span>Contact</span>
+		  	<ul>
+		  		<li><span><i class="fa fa-envelope"></i></span></li>
+		  		<li><span><i class="fa fa-mobile"></i></span></li>
+		  		<li><span><i class="fa fa-inbox"></i></span></li>
+	  		</ul>
+		  </li>
 		</ul>
 	</div>
   </div><!-- /.container-fluid -->
