--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,11 +3,13 @@ $icon-font-path: '../fonts/';
 // bower:scss
 @import "bootstrap";
 @import "font-awesome";
+@import url(http://fonts.googleapis.com/css?family=Lato:300);
 // endbower
 
 /* Space out content a bit */
 body {
-  padding-top: 75px;
+  margin: 0
+  padding-top: 72px !important;
   padding-bottom: 20px;
 }
 
