--- a/app/layout/_footer.html
+++ b/app/layout/_footer.html
@@ -1,35 +1,39 @@
-<div class="full-width">
-	<div class="container background-footer">
-		<div class="row">
-			<div class="col-xs-4">
-				Test
-			</div>
-			<div class="col-xs-4">
-				<div class="row">
-				<div class="col-xs-8">
-					<ul class="remove-padding list-none">
-						<li><a href="#">Inicio</a></li>
-						<li><a href="#">IT Services & Support</a></li>
-						<li><a href="#">Networking</a></li>
-						<li><a href="#">Surveillance Cameras</a></li>
-						<li><a href="#">Audio & Video Systems</a></li>
-						<li><a href="#">Automation</a></li>
-					</ul>
-				</div>
-				<div class="col-xs-4">
-					<ul class="remove-padding list-none">
-						<li><a href="#">Idiomas</a></li>
-						<li><a href="#">Contacto</a></li>
-						<li><a href="#">Correo</a></li>
-						<li><a href="#">Teléfono</a></li>
-						<li><a href="#">P.O. Box</a></li>
-					</ul>
-				</div>
-				</div>
-			</div>
-			<div class="col-xs-4">
-				Test again
-			</div>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-sm-4 text-center">
+			<img src="img/logo_GT_small.png" alt="Logo">
+		</div>
+		<div class="col-sm-2">
+			<ul class="unstyled">
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">IT Services & Suport</a></li>
+				<li><a href="#">Networking</a></li>
+				<li><a href="#">Surveillance & Cameras</a></li>
+				<li><a href="#">Audio & Video Systems</a></li>
+				<li><a href="#">Automation</a></li>
+			</ul>
+		</div>
+		<div class="col-sm-2">
+			<ul class="unstyled">
+				<li><a href="#">Idiomas</a></li>
+				<li><a href="#">Contacto</a></li>
+				<li><a href="#">Correo</a></li>
+				<li><a href="#"></a>Teléfono</li>
+				<li><a href="#">P.O. Box</a></li>
+			</ul>
+		</div>
+		<div class="col-sm-4">
+			<h6>Ubicación</h6>
+			<br>
+			
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-12 text-center">
+			<p class="copyright">
+				GADGET TECHONOLOGY &copy;TODOS LO DERECHOS RESERVADOS / 2015 - DISEÑO Y DIRECCIÓN PARA EL SITIO. - I.COMUNICACIÓN CREATIVA
+			</p>
 		</div>
 	</div>
 </div>
