footer con imagenes

--- a/app/layout/_footer.html
+++ b/app/layout/_footer.html
@@ -1,34 +1,38 @@
-<div class="container-fluid">
+<div class="container">
 	<div class="row">
-		<div class="col-sm-4 text-center">
+		<div class="col-xs-3 text-center">
 			<img src="img/logo_GT_small.png" alt="Logo">
 		</div>
-		<div class="col-sm-2">
-			<ul class="unstyled">
-				<li><a href="#">Inicio</a></li>
-				<li><a href="#">IT Services & Suport</a></li>
-				<li><a href="#">Networking</a></li>
-				<li><a href="#">Surveillance & Cameras</a></li>
-				<li><a href="#">Audio & Video Systems</a></li>
-				<li><a href="#">Automation</a></li>
-			</ul>
+		<div class="col-xs-5 vertical-bar-left vertical-bar-right">
+			<div class="row">
+				<div class="col-xs-8 breathe">
+					<ul class="unstyled">
+						<li><a href="#">Inicio</a></li>
+						<li><a href="#">IT Services & Suport</a></li>
+						<li><a href="#">Networking</a></li>
+						<li><a href="#">Surveillance & Cameras</a></li>
+						<li><a href="#">Audio & Video Systems</a></li>
+						<li><a href="#">Automation</a></li>
+					</ul>
+				</div>
+				<div class="col-xs-4">
+					<ul class="unstyled">
+						<li><a href="#">Idiomas</a></li>
+						<li><a href="#">Contacto</a></li>
+						<li><a href="#">Correo</a></li>
+						<li><a href="#"></a>Teléfono</li>
+						<li><a href="#">P.O. Box</a></li>
+						<li><a href="">&nbsp;</a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
-		<div class="col-sm-2">
-			<ul class="unstyled">
-				<li><a href="#">Idiomas</a></li>
-				<li><a href="#">Contacto</a></li>
-				<li><a href="#">Correo</a></li>
-				<li><a href="#"></a>Teléfono</li>
-				<li><a href="#">P.O. Box</a></li>
-			</ul>
-		</div>
-		<div class="col-sm-4">
-			<h6>Ubicación</h6>
-			<br>
-			
+		<div class="col-xs-3 map">
+			<p>Ubicación</p>
+			<img src="img/map.png" alt="Map">
 		</div>
 	</div>
-
+	<br>
 	<div class="row">
 		<div class="col-sm-12 text-center">
 			<p class="copyright">
