--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,16 +9,20 @@ $icon-font-path: '../fonts/';
 /* Space out content a bit */
 body {
   margin: 0;
-  padding-top: 72px !important;
+//  padding-top: 72px !important;
 }
 
-  .fa, .menu-social {
-    font-size: 30px;
-  }
-  
-  .fa.fa-mobile {
-    font-size: 50px;
-  }
+.container {
+  width: 1170px !important;
+}
+
+.fa, .menu-social {
+  font-size: 30px;
+}
+
+.fa.fa-mobile {
+  font-size: 50px;
+}
 
 /* Custom page footer */
 .footer {
