--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -21,23 +21,23 @@
 	<div class="row">
 		<ul class="gadget-dropdown-menu gadget-dropdown-menu-container pull-right">
 		  <li class="gadget-dropdown-menu-it">
-		  	<span>IT Services &amp; Support</span>
+		  	<a href="/it-services-and-support.html"><span>IT Services &amp; Support</span></a>
 		  	<ul>
 		  		<li><span>Service Desk</span></li>
 		  		<li><span>Outsourcing</span></li>
 	  		</ul>
 		  </li>
 		  <li class="gadget-dropdown-menu-networking">
-		  	<span>Networking</span>
+		  	<a href="/networking.html"><span>Networking</span></a>
 		  </li>
 		  <li class="gadget-dropdown-menu-surveillance">
-			<span>Surveillance Cameras</span>
+			<a href="/surveillance-cameras.html"><span>Surveillance Cameras</span></a>
 		  </li>
 		  <li class="gadget-dropdown-menu-audio">
-		  	<span>Audio &amp; Video</span>
+		  	<a href="/audio-and-video.html"><span>Audio &amp; Video</span></a>
 		  </li>
 		  <li class="gadget-dropdown-menu-automation">
-		  	<span>Automation</span>
+		  	<a href="/automation.html"><span>Automation</span></a>
 		  </li>
 		  <li class="gadget-dropdown-menu-contact">
 		  	<span>Contact</span>
