--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -14,7 +14,7 @@
 		  <li class="col-xs-offset-2 col-xs-2"><i class="fa fa-twitter"></i></li>
 		  <li class="col-xs-2"><i class="fa fa-facebook-official"></i></li>
 		  <li class="col-xs-2"><i class="fa fa-instagram"></i></li>
-		  <li class="col-xs-4 text-center">es</li>
+		  <li class="col-xs-4 text-center"><a id="language-switch" language="es">es</a></li>
 		</ul>
       </div>
     </div>
