--- a/app/layout/_carousel.html
+++ b/app/layout/_carousel.html
@@ -14,11 +14,25 @@
             ...
           </div>
         </div>
+        <div class="item" style="background-color: green;">
+          <img src="img/GT_Networking.png" alt="...">
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
+        <div class="item" style="background-color: green;">
+          <img src="img/GT_SURVLL_CAM.png" alt="...">
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
       <!-- Indicators -->
       </div>
 
       <ol class="carousel-indicators">
         <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
         <li data-target="#main-carousel" data-slide-to="1"></li>
+        <li data-target="#main-carousel" data-slide-to="2"></li>
+        <li data-target="#main-carousel" data-slide-to="3"></li>
       </ol>
     </div>
