textos con las traducciones y mejoras en el boton para cambiar el idioma

--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -158,6 +158,16 @@ $navBrandHeight: 55px;
 	}
 }
 
+.gadget-language-sw{
+	color: white;
+	text-decoration: none;
+}
+
+.gadget-language-sw:hover{
+	cursor: pointer;
+	color: white;
+	text-decoration: none;
+}
 
 
 /*=====  End of Navbar  ======*/
