--- a/app/layout/_carousel.html
+++ b/app/layout/_carousel.html
@@ -2,26 +2,38 @@
 
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
-        <div class="item active" style="background-color: red;">
+        <div class="item active">
           <img src="img/GT_Image_Tools_Web.jpg" alt="...">
           <div class="carousel-caption">
             ...
           </div>
         </div>
-        <div class="item" style="background-color: green;">
+        <div class="item">
           <img src="img/IT_SERV_SUPPORT_ImagenPpal.jpg" alt="...">
           <div class="carousel-caption">
             ...
           </div>
         </div>
-        <div class="item" style="background-color: green;">
+        <div class="item">
           <img src="img/GT_Networking.png" alt="...">
           <div class="carousel-caption">
             ...
           </div>
         </div>
-        <div class="item" style="background-color: green;">
+        <div class="item">
           <img src="img/GT_SURVLL_CAM.png" alt="...">
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
+        <div class="item" style="background-color: #B2D46B;">
+          <img src="" alt="...">
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
+        <div class="item" style="background-color: silver;">
+          <img src="" alt="...">
           <div class="carousel-caption">
             ...
           </div>
@@ -34,5 +46,7 @@
         <li data-target="#main-carousel" data-slide-to="1"></li>
         <li data-target="#main-carousel" data-slide-to="2"></li>
         <li data-target="#main-carousel" data-slide-to="3"></li>
+        <li data-target="#main-carousel" data-slide-to="4"></li>
+        <li data-target="#main-carousel" data-slide-to="5"></li>
       </ol>
     </div>
