--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,12 +7,33 @@ $icon-font-path: '../fonts/';
 
 /* Space out content a bit */
 body {
-  margin: 0;
-  padding-top: 72px !important;
+	color:#6F6F6F;
+	margin: 0;
+	padding-top: 72px !important;
+	font-size: 16px;
 }
 
-h1, h2, h3 {
+p {
+	text-align: justify;
+}
+
+h1, h2, h3, h4, h5 {
 	text-align: center;
+}
+
+h1 {
+	font-size: 44px;
+}
+
+h2 {
+	color: black;
+	font-weight: bold;
+	margin-bottom: 1em;
+	margin-top: 0px;
+}
+
+h4 {
+	font-weight: bold;
 }
 
 .carousel {
@@ -59,3 +80,25 @@ h1, h2, h3 {
 .fa.fa-mobile {
   font-size: 50px;
 }
+
+.main-title {
+	border-bottom: 2px solid #666666;
+	margin-bottom: 1em;
+}
+
+#home-description, #it-service-desk-description, #networking-desc, #surveillance-desc, #audio-desc-p1, #automation-desc-p1 {
+	font-size: 1.25em;
+	line-height: 1.5em;
+	margin-bottom: 2em;
+	text-align: center;
+}
+
+.audio-video-for {
+	b { 
+		color: #4D4D4D; 
+		display: block; 
+		font-size: 1.5em;
+	}
+}
+
+.copyright { text-align: center; }
