--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -1,55 +1,57 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default">
   <div class="gadget-navbar">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="row">
-      <div class="col-xs-2 col-xs-offset-1">
-        <div class="navbar-header">
-          <a class="navbar-brand text-center" href="#">
-            <img src="/img/logo_GT_small.png" alt="Gadget">
-          </a>
-        </div>
-      </div>
-      <div class="col-xs-9 gadget-navbar-menu">
-		<ul class="col-xs-4 pull-right menu-social">
-		  <li class="col-xs-offset-2 col-xs-2"><i class="fa fa-twitter"></i></li>
-		  <li class="col-xs-2"><i class="fa fa-facebook-official"></i></li>
-		  <li class="col-xs-2"><i class="fa fa-instagram"></i></li>
-		  <li class="col-xs-4 text-center">
-		  	<a id="language-switch" class="gadget-language-sw">es</a>
-		  </li>
-		</ul>
-      </div>
-    </div>
-	<div class="row">
-		<ul class="gadget-dropdown-menu gadget-dropdown-menu-container pull-right">
-		  <li class="gadget-dropdown-menu-it">
-		  	<span><a href="/it-services-and-support.html">IT Services &amp; Support</a></span>
-		  	<ul>
-		  		<li><span>Service Desk</span></li>
-		  		<li><span>Outsourcing</span></li>
-	  		</ul>
-		  </li>
-		  <li class="gadget-dropdown-menu-networking">
-		  	<span><a href="/networking.html">Networking</a></span>
-		  </li>
-		  <li class="gadget-dropdown-menu-surveillance">
-			<span><a href="/surveillance-cameras.html">Surveillance Cameras</a></span>
-		  </li>
-		  <li class="gadget-dropdown-menu-audio">
-		  	<span><a href="/audio-and-video.html">Audio &amp; Video</a></span>
-		  </li>
-		  <li class="gadget-dropdown-menu-automation">
-		  	<span><a href="/automation.html">Automation</a></span>
-		  </li>
-		  <li class="gadget-dropdown-menu-contact">
-		  	<span>Contact</span>
-		  	<ul>
-		  		<li><span><i class="fa fa-envelope"></i></span></li>
-		  		<li><span><i class="fa fa-mobile"></i></span></li>
-		  		<li><span><i class="fa fa-inbox"></i></span></li>
-	  		</ul>
-		  </li>
-		</ul>
+    <div class="col-xs-12">
+	    <div class="row">
+	      <div class="col-xs-2 col-xs-offset-1">
+	        <div class="navbar-header">
+	          <a class="navbar-brand text-center" href="#">
+	            <img src="/img/logo_GT_small.png" alt="Gadget">
+	          </a>
+	        </div>
+	      </div>
+	      <div class="col-xs-9 gadget-navbar-menu">
+			<ul class="col-xs-4 pull-right menu-social">
+			  <li class="col-xs-offset-2 col-xs-2"><i class="fa fa-twitter"></i></li>
+			  <li class="col-xs-2"><i class="fa fa-facebook-official"></i></li>
+			  <li class="col-xs-2"><i class="fa fa-instagram"></i></li>
+			  <li class="col-xs-4 text-center">
+			  	<a id="language-switch" class="gadget-language-sw">es</a>
+			  </li>
+			</ul>
+	      </div>
+	    </div>
+		<div class="row">
+			<ul class="gadget-dropdown-menu gadget-dropdown-menu-container pull-right">
+			  <li class="gadget-dropdown-menu-it">
+			  	<span><a href="/it-services-and-support.html">IT Services &amp; Support</a></span>
+			  	<ul>
+			  		<li><span>Service Desk</span></li>
+			  		<li><span>Outsourcing</span></li>
+		  		</ul>
+			  </li>
+			  <li class="gadget-dropdown-menu-networking">
+			  	<span><a href="/networking.html">Networking</a></span>
+			  </li>
+			  <li class="gadget-dropdown-menu-surveillance">
+				<span><a href="/surveillance-cameras.html">Surveillance Cameras</a></span>
+			  </li>
+			  <li class="gadget-dropdown-menu-audio">
+			  	<span><a href="/audio-and-video.html">Audio &amp; Video</a></span>
+			  </li>
+			  <li class="gadget-dropdown-menu-automation">
+			  	<span><a href="/automation.html">Automation</a></span>
+			  </li>
+			  <li class="gadget-dropdown-menu-contact">
+			  	<span>Contact</span>
+			  	<ul>
+			  		<li><span><i class="fa fa-envelope"></i></span></li>
+			  		<li><span><i class="fa fa-mobile"></i></span></li>
+			  		<li><span><i class="fa fa-inbox"></i></span></li>
+		  		</ul>
+			  </li>
+			</ul>
+		</div>
 	</div>
   </div><!-- /.container-fluid -->
 </nav>
