--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -1,4 +1,5 @@
 .full-width{
+	min-width:1170px;
 	width: 100%;
 }
 
@@ -16,6 +17,7 @@
 	border-top: 1px solid #e5e5e5;
 	margin-top:50px;
 	padding-top: 19px;
+	min-width: 1170px;
 }
 
 ul.unstyled {
