indicadores redondeados compatibles con otros navegadores

--- a/app/layout/_carousel.html
+++ b/app/layout/_carousel.html
@@ -4,39 +4,27 @@
       <div class="carousel-inner" role="listbox">
         <div class="item active">
           <img src="img/GT_Image_Tools_Web.jpg" alt="...">
-          <div class="carousel-caption">
-            ...
-          </div>
+          <div class="carousel-caption"></div>
         </div>
         <div class="item">
           <img src="img/IT_SERV_SUPPORT_ImagenPpal.jpg" alt="...">
-          <div class="carousel-caption">
-            ...
-          </div>
+          <div class="carousel-caption"></div>
         </div>
         <div class="item">
           <img src="img/GT_Networking.png" alt="...">
-          <div class="carousel-caption">
-            ...
-          </div>
+          <div class="carousel-caption"></div>
         </div>
         <div class="item">
           <img src="img/GT_SURVLL_CAM.png" alt="...">
-          <div class="carousel-caption">
-            ...
-          </div>
+          <div class="carousel-caption"></div>
         </div>
         <div class="item" style="background-color: #B2D46B;">
           <img src="" alt="...">
-          <div class="carousel-caption">
-            ...
-          </div>
+          <div class="carousel-caption"></div>
         </div>
         <div class="item" style="background-color: silver;">
           <img src="" alt="...">
-          <div class="carousel-caption">
-            ...
-          </div>
+          <div class="carousel-caption"></div>
         </div>
       <!-- Indicators -->
       </div>
