--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -46,14 +46,27 @@ h4 {
 			background-color: white;
 			height: 14px;
 			margin: 1% 1% 0 1%;
-			outline: 1px solid #ACADAF;
+			/*outline: 1px solid #ACADAF;
 			outline-offset: 1px;
 			outline-radius: 10px;
 			-moz-outline-radius: 10px;
 			-ms-outline-radius: 10px;
 			-o-outline-radius: 10px;
-			-webkit-outline-radius: 10px;
-			width: 14px;
+			-webkit-outline-radius: 10px; */
+			border-radius: 100%;
+		    /* #1 */
+		    border: 2px solid white;
+		    /* #2 * /
+		    padding: 5px;
+		    background: hsl(0, 0%, 20%);
+		    */
+		    
+		    /* #3 
+		    outline: 5px solid hsl(0, 0%, 60%); */
+		    
+		    /* #4 AND INFINITY!!! (CSS3 only) */
+		    box-shadow: 0 0 1px 1px #ACADAF;
+		    width: 14px;
 		}
 
 		li.active {
