ajuste en tamaño de barras de colores en header, cmabio de imagen en footer, ajustes menores

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -101,7 +101,7 @@ h4 {
 	margin-bottom: 1em;
 }
 
-#home-description, #it-service-desk-description, #networking-desc, #surveillance-desc, #audio-desc-p1, #automation-desc-p1 {
+#home-description, #networking-desc, #surveillance-desc, #audio-desc-p1, #automation-desc-p1 {
 	font-size: 1.25em;
 	line-height: 1.5em;
 	margin-bottom: 2em;
