--- a/app/layout/_footer.html
+++ b/app/layout/_footer.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-3 text-center">
-			<img src="img/logo_GT_small.png" alt="Logo">
+			<img src="img/GT_LOGOTIPO_DIAPO_TRANSP.png" alt="Logo" class="col-xs-12">
 		</div>
 		<div class="col-xs-5 vertical-bar-left vertical-bar-right">
 			<div class="row">
