--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -16,6 +16,7 @@ $navBrandHeight: 55px;
 	margin-bottom:0px;
 	min-width:1170px;
 	width:100%;
+	z-index: 100;
 }
 
 .navbar-default {
@@ -63,7 +64,7 @@ $navBrandHeight: 55px;
 	background-color: transparent;
 	font-family: $font-stack;
 	font-size: 15px;
-	height: 7px;
+	height: 5px;
 	list-style: none;
 	margin-bottom: 0px;
 	padding:0;
