--- a/app/layout/_footer.html
+++ b/app/layout/_footer.html
@@ -7,12 +7,12 @@
 			<div class="row">
 				<div class="col-xs-8 breathe">
 					<ul class="unstyled">
-						<li><a href="#">Inicio</a></li>
-						<li><a href="#">IT Services & Suport</a></li>
-						<li><a href="#">Networking</a></li>
-						<li><a href="#">Surveillance & Cameras</a></li>
-						<li><a href="#">Audio & Video Systems</a></li>
-						<li><a href="#">Automation</a></li>
+						<li><a href="/">Inicio</a></li>
+						<li><a href="/it-services-and-support.html">IT Services & Suport</a></li>
+						<li><a href="/networking.html">Networking</a></li>
+						<li><a href="/surveillance-cameras.html">Surveillance & Cameras</a></li>
+						<li><a href="/audio-and-video.html">Audio & Video Systems</a></li>
+						<li><a href="/automation.html">Automation</a></li>
 					</ul>
 				</div>
 				<div class="col-xs-4">
