--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -5,7 +5,7 @@
 	    <div class="row">
 	      <div class="col-xs-2 col-xs-offset-1">
 	        <div class="navbar-header">
-	          <a class="navbar-brand text-center" href="#">
+	          <a class="navbar-brand text-center" href="/">
 	            <img src="/img/logo_GT_small.png" alt="Gadget">
 	          </a>
 	        </div>
