--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -38,7 +38,8 @@ h4 {
 
 .carousel {
 	margin-bottom: 50px;
-	min-width: 1170px;
+	/*min-width: 1170px;*/
+	width: 100%;
 	.carousel-indicators {
 		bottom: -50px; 
 		li {
