--- a/app/layout/_footer.html
+++ b/app/layout/_footer.html
@@ -7,12 +7,12 @@
 			<div class="row">
 				<div class="col-xs-8 breathe">
 					<ul class="unstyled">
-						<li><a href="/">Inicio</a></li>
-						<li><a href="/it-services-and-support.html">IT Services & Suport</a></li>
-						<li><a href="/networking.html">Networking</a></li>
-						<li><a href="/surveillance-cameras.html">Surveillance & Cameras</a></li>
-						<li><a href="/audio-and-video.html">Audio & Video Systems</a></li>
-						<li><a href="/automation.html">Automation</a></li>
+						<li><a href="/"><span class="home-title"></span></a></li>
+						<li><a href="/it-services-and-support.html"><span class="it-services-title"></span></a></li>
+						<li><a href="/networking.html"><span class="networking-title"></span></a></li>
+						<li><a href="/surveillance-cameras.html"><span class="surveillance-title"></span></a></li>
+						<li><a href="/audio-and-video.html"><span class="audio-title"></span></a></li>
+						<li><a href="/automation.html"><span class="automation-title"></span></a></li>
 					</ul>
 				</div>
 				<div class="col-xs-4">
@@ -41,13 +41,3 @@
 		</div>
 	</div>
 </div>
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='https://www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
