adding arrows for language switch

--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -16,7 +16,12 @@
 			  <li class="col-xs-2"><i class="fa fa-facebook-official"></i></li>
 			  <li class="col-xs-2"><i class="fa fa-instagram"></i></li>
 			  <li class="col-xs-4 text-center">
-			  	<a id="language-switch" class="gadget-language-sw">eng</a>
+			  	<i class="fa fa-caret-left gadget-language-sw-arrow"></i>
+			  	<a id="language-switch" class="gadget-language-sw">
+			  		eng
+			  	</a>
+				<i class="fa fa-caret-right gadget-language-sw-arrow"></i>
+
 			  </li>
 			</ul>
 	      </div>
