--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -167,7 +167,7 @@ $navBrandHeight: 55px;
 	text-decoration: none;
 }
 
-.gadget-language-sw:hover{
+.gadget-language-sw:hover, .gadget-language-sw-arrow:hover{
 	cursor: pointer;
 	color: white;
 	text-decoration: none;
