--- a/app/layout/_carousel.html
+++ b/app/layout/_carousel.html
@@ -3,27 +3,27 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="img/GT_Image_Tools_Web.jpg" alt="...">
+          <img src="img/home_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
         <div class="item">
-          <img src="img/IT_SERV_SUPPORT_ImagenPpal.jpg" alt="...">
+          <img src="img/itservices_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
         <div class="item">
-          <img src="img/GT_Networking.png" alt="...">
+          <img src="img/networking_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
         <div class="item">
-          <img src="img/GT_SURVLL_CAM.png" alt="...">
+          <img src="img/surveillance_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
-        <div class="item" style="background-color: #B2D46B;">
-          <img src="" alt="...">
+        <div class="item">
+          <img src="img/audio_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
-        <div class="item" style="background-color: silver;">
-          <img src="" alt="...">
+        <div class="item">
+          <img src="img/automation_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
       <!-- Indicators -->
