working on it services

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -163,3 +163,11 @@ h4 {
 		}
 	}
 }
+
+.it-services-help-desk {
+	transform : scale(0.1, 0.1);
+}
+
+.it-services-help{
+	transform : scale(0.9, 0.7);
+}
