lista la seccion de it-services

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -165,9 +165,9 @@ h4 {
 }
 
 .it-services-help-desk {
-	transform : scale(0.1, 0.1);
+	width : 100%;
 }
 
 .it-services-help{
-	transform : scale(0.9, 0.7);
+	width : 100%;
 }
