--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -113,6 +113,7 @@ $boxPadding: 5% 2.5% 2% 2.5%;
 }
 
 #contact.contact-surveillance > div {
+	margin-top : -95px;
 	.title {
 		background-color: #FFCD27;
 		h2 {
