--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -183,3 +183,10 @@ h4 {
 .img-full {
 	width : 100%;
 }
+
+.surveillance-helper{
+	margin-top : 20px;
+	border-top: 2px solid #666666;
+	padding-top : 98px;
+}
+
