--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -132,6 +132,7 @@ $boxPadding: 5% 2.5% 2% 2.5%;
 }
 
 #contact.contact-audio > div {
+	margin-top : -210px;
 	.title {
 		background-color: #548041;
 		h2 {
