--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -144,11 +144,12 @@ h4 {
 
 .network-brands {
 	border-bottom: 2px solid #666666;
-	padding-bottom: 5px;
+	padding-bottom: 100px;
+	margin-bottom: 75px;
 
 	div { 
 		display: inline-block;
-		height: 200px;
+		height: 150px;
 		vertical-align: middle;
 
 		.helper {
