--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -141,6 +141,10 @@ h4 {
 	background-image: url('../img/GT Automation Icon2.png');
 }
 
+.it-helper{
+	border-bottom: 2px solid #666666;
+	padding-bottom : 93px;
+}
 
 .network-brands {
 	border-bottom: 2px solid #666666;
