ajuste en ancho de imagenes de carrusel

--- a/app/layout/_carousel.html
+++ b/app/layout/_carousel.html
@@ -2,27 +2,27 @@
 
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
-        <div class="item active">
+        <div class="item item-home active">
           <img src="img/home_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
-        <div class="item">
+        <div class="item item-it-services">
           <img src="img/itservices_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
-        <div class="item">
+        <div class="item item-networking">
           <img src="img/networking_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
-        <div class="item">
+        <div class="item item-surveillance">
           <img src="img/surveillance_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
-        <div class="item">
+        <div class="item item-audio">
           <img src="img/audio_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
-        <div class="item">
+        <div class="item item-automation">
           <img src="img/automation_eng.png" alt="...">
           <div class="carousel-caption"></div>
         </div>
