--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -3,15 +3,15 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="col-xs-12">
 	    <div class="row">
-	      <div class="col-xs-2 col-xs-offset-1">
+	      <div class="col-xs-4 col-xs-offset-1">
 	        <div class="navbar-header">
 	          <a class="navbar-brand text-center" href="/">
 	            <img src="/img/logo_GT_small.png" alt="Gadget">
 	          </a>
 	        </div>
 	      </div>
-	      <div class="col-xs-9 gadget-navbar-menu">
-			<ul class="col-xs-4 pull-right menu-social">
+	      <div class="col-xs-7 gadget-navbar-menu">
+			<ul class="col-xs-offset-4 col-xs-6 menu-social">
 			  <li class="col-xs-offset-2 col-xs-2"><i class="fa fa-twitter"></i></li>
 			  <li class="col-xs-2"><i class="fa fa-facebook-official"></i></li>
 			  <li class="col-xs-2"><i class="fa fa-instagram"></i></li>
