--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -77,6 +77,7 @@ $boxPadding: 5% 2.5% 2% 2.5%;
 }
 
 #contact.contact-it > div {
+	margin-top : 18px;
 	.title {
 		background-color: #503774;
 		h2 {
