working in the gulpfile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,8 @@
 $icon-font-path: '../fonts/';
 
 // bower:scss
-@import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
-@import url(http://fonts.googleapis.com/css?family=Lato:300);
+// @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+// @import url(http://fonts.googleapis.com/css?family=Lato:300);
 // endbower
 
 /* Space out content a bit */
