--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,10 +1,5 @@
 $icon-font-path: '../fonts/';
 
-// bower:scss
-// @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
-// @import url(http://fonts.googleapis.com/css?family=Lato:300);
-// endbower
-
 /* Space out content a bit */
 body {
 	color:#6F6F6F;
@@ -237,3 +232,6 @@ h4 {
 	margin-top: -10px;
 }
 
+// bower:scss
+@import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+// endbower
