correccion en ancho minimo de carrusel y desborde en elementos de cabecera

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -47,7 +47,7 @@ h4 {
 .carousel {
 
 	margin-bottom: 50px;
-	/*min-width: 1170px;*/
+	min-width: 1170px;
 	width: 100%;
 	.carousel-indicators {
 		bottom: -50px; 
