--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,7 @@
 // bower:scss
 @import "dist/bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "dist/bower_components/font-awesome/scss/font-awesome.scss";
 // endbower
-
-$icon-font-path: '../fonts/';
 
 /* Space out content a bit */
 body {
