--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -13,7 +13,7 @@
 	      <div class="col-xs-7 gadget-navbar-menu">
 			<ul class="col-xs-offset-5 col-xs-6 menu-social">
 			  <li class="col-xs-offset-1 col-xs-2"><i class="fa fa-twitter"></i></li>
-			  <li class="col-xs-2"><i class="fa fa-facebook-official"></i></li>
+			  <li class="col-xs-2"><i class="fa fa-facebook-square"></i></li>
 			  <li class="col-xs-2"><i class="fa fa-instagram"></i></li>
 			  <li class="col-xs-5 text-center">
 			  	<i class="fa fa-caret-left gadget-language-sw-arrow"></i>
