--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -2,7 +2,7 @@ $font-stack: "Myriad Pro", "Gill Sans", Helvetica, sans-serif;
 $backgroundColor: white;
 $baseColor1: #c7c9cc;
 $baseColor2: #58595b;
-$navBarHeight: 65px;
+$navBarHeight: 85px;
 $navBrandHeight: 55px;
 
 /*==============================
@@ -38,7 +38,8 @@ $navBrandHeight: 55px;
 .navbar-brand{
 	padding: 7px 0px 0px 40px;
 	img {
-		height: $navBrandHeight;
+		height: 95px;
+		margin-top: -12px;
 	}
 }
 
@@ -46,7 +47,7 @@ $navBrandHeight: 55px;
 	background-color: $baseColor2;
 	font-family: $font-stack;
 	height: $navBarHeight;
-	padding-top: 10px;
+	padding-top: 20px;
 
 	ul {
 		list-style: none;
