--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -29,23 +29,23 @@
 		<div class="row">
 			<ul class="gadget-dropdown-menu gadget-dropdown-menu-container pull-right">
 			  <li class="gadget-dropdown-menu-it">
-			  	<span><a href="/it-services-and-support.html"><span class="it-services-title"></span></a></span>
+			  	<span><a href="#" class="menu-link item-it-services"><span class="it-services-title"></span></a></span>
 			  	<ul>
-			  		<li><a href="/it-services-and-support.html"><span>Service Desk</span></a></li>
-			  		<li><a href="/it-services-and-support.html"><span>Outsourcing</span></a></li>
+			  		<li><a href="#" class="menu-link item-it-services"><span>Service Desk</span></a></li>
+			  		<li><a href="#" class="menu-link item-it-services"><span>Outsourcing</span></a></li>
 		  		</ul>
 			  </li>
 			  <li class="gadget-dropdown-menu-networking">
-			  	<span><a href="/networking.html"><span class="networking-title"></span></a></span>
+			  	<span><a href="#" class="menu-link item-networking"><span class="networking-title"></span></a></span>
 			  </li>
 			  <li class="gadget-dropdown-menu-surveillance">
-				<span><a href="/surveillance-cameras.html"><span class="surveillance-title"></span></a></span>
+				<span><a href="#" class="menu-link item-surveillance"><span class="surveillance-title"></span></a></span>
 			  </li>
 			  <li class="gadget-dropdown-menu-audio">
-			  	<span><a href="/audio-and-video.html"><span class="audio-title"></span></a></span>
+			  	<span><a href="#" class="menu-link item-audio"><span class="audio-title"></span></a></span>
 			  </li>
 			  <li class="gadget-dropdown-menu-automation">
-			  	<span><a href="/automation.html"><span class="automation-title"></span></a></span>
+			  	<span><a href="#" class="menu-link item-automation"><span class="automation-title"></span></a></span>
 			  </li>
 			  <li class="gadget-dropdown-menu-contact">
 			  	<span>Contact</span>
