links a redes y correo + copyright

--- a/app/layout/_footer.html
+++ b/app/layout/_footer.html
@@ -34,9 +34,9 @@
 	</div>
 	<br>
 	<div class="row">
-		<div class="col-sm-12 text-center">
+		<div class="col-sm-12">
 			<p class="copyright">
-				GADGET TECHONOLOGY &copy;TODOS LO DERECHOS RESERVADOS / 2015 - DISEÑO Y DIRECCIÓN PARA EL SITIO. - I.COMUNICACIÓN CREATIVA
+				Copyright &copy; 2015 <span class="company-color">Gadget Technology.com</span> All rights reserved / Web project management: i.comunicacioncreativa@gmail.com
 			</p>
 		</div>
 	</div>
