--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -33,7 +33,12 @@ ul.unstyled {
 
 
 .copyright{
-	font-size: 9px;
+	font-size: 10px;
+	padding-left : 25px;
+}
+
+.company-color{
+	color : #85B545;
 }
 
 .vertical-bar-left{
