--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -12,8 +12,8 @@
 	      </div>
 	      <div class="col-xs-7 gadget-navbar-menu">
 			<ul class="col-xs-offset-4 col-xs-6 menu-social">
-			  <li class="col-xs-offset-1 col-xs-2"><i class="fa fa-envelope"></i></li>
-			  <li class="col-xs-2"><i class="fa fa-facebook-square"></i></li>
+			  <li class="col-xs-offset-1 col-xs-2"><a href="mailto:carlosreyes@gadget-technology.com"><i class="fa fa-envelope"></i></a></li>
+			  <li class="col-xs-2"><a href="https://www.facebook.com/gadgethouston"><i class="fa fa-facebook-square"></i></a></li>
 			  <li class="col-xs-2"><i class="fa fa-instagram"></i></li>
 			  <li class="col-xs-5 text-center">
 			  	<i class="fa fa-caret-left gadget-language-sw-arrow"></i>
