--- a/app/layout/_footer.html
+++ b/app/layout/_footer.html
@@ -1,9 +1,9 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xs-3 text-center">
+		<div class="col-xs-3 text-center footer-top">
 			<img src="img/GT_LOGOTIPO_DIAPO_TRANSP.png" alt="Logo" class="col-xs-12">
 		</div>
-		<div class="col-xs-5 vertical-bar-left vertical-bar-right">
+		<div class="col-xs-5 vertical-bar-left vertical-bar-right footer-top">
 			<div class="row">
 				<div class="col-xs-8 breathe">
 					<ul class="unstyled">
@@ -17,23 +17,31 @@
 				</div>
 				<div class="col-xs-4">
 					<ul class="unstyled">
-						<li><a href="#">Idiomas</a></li>
-						<li><a href="#">Contacto</a></li>
-						<li><a href="#">Correo</a></li>
-						<li><a href="#"></a>Teléfono</li>
-						<li><a href="#">P.O. Box</a></li>
-						<li><a href="">&nbsp;</a></li>
+						<li><a href="mailto:carlosreyes@gadget-technology.com"><span class="footer-email">E-mail</span></a></li>
+						<li><a href="https://www.facebook.com/gadgethouston">Facebook</a></li>
+						<li><a href="#">Instagram</a></li>
+						<li>Idiomas</li>
+						<li>English</li>
+						<li>Español</li>
+						<li><a href="#"><span class="footer-contact">Contact Us</span></a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
 		<div class="col-xs-3 map">
-			<p>Ubicación</p>
-			<img src="img/map.png" alt="Map">
+			<ul class="unstyled spaced">
+				<li><strong><span class="footer-mobile">Mobile</span>:</strong></li>
+				<li><span class="footer-phone">713-517-6925</span></li>
+				<li><strong><span class="footer-pobox">P.O. Box</span>:</strong></li>
+				<li>218513 Houston TX. 77218-8513</li>
+				<li><strong><span class="footer-location">Locate</span>:</strong></li>
+				<li>&nbsp;</li>
+				<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9797.234608723671!2d-95.36896406346602!3d29.753183862848324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640bf3e75f13859%3A0x10b2bea4bc857bec!2sHouston+House!5e0!3m2!1ses-419!2sve!4v1450285339321" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe></li>
+			</ul>
 		</div>
 	</div>
 	<br>
-	<div class="row">
+	<div class="row footer-bottom">
 		<div class="col-sm-12">
 			<p class="copyright">
 				Copyright &copy; 2015 <span class="company-color">Gadget Technology.com</span> All rights reserved / Web project management: i.comunicacioncreativa@gmail.com
