--- a/app/layout/_contact.html
+++ b/app/layout/_contact.html
@@ -2,7 +2,7 @@
 	<div class="title"><h2>Cont&aacute;ctenos:</h2></div>
 	<div class="info">
 		<ul>
-	  		<li class="email"><i class="fa fa-envelope"></i> <span>carlosreyes</span></li>
+	  		<li class="email"><a href="mailto:carlosreyes@gadget-technology.com"><i class="fa fa-envelope"></i></a> <span>carlosreyes</span></li>
 	  		<li class="phone"><i class="fa fa-mobile"></i> <span>713-517-6925</span></li>
 	  		<li class="address"><i class="fa fa-inbox"></i> <span>218513 Houston TX, <br> 77218-8513</span></li>
 		</ul>
