--- a/app/layout/_footer.html
+++ b/app/layout/_footer.html
@@ -8,11 +8,11 @@
 				<div class="col-xs-8 breathe">
 					<ul class="unstyled">
 						<li><a href="/"><span class="home-title"></span></a></li>
-						<li><a href="/it-services-and-support.html"><span class="it-services-title"></span></a></li>
-						<li><a href="/networking.html"><span class="networking-title"></span></a></li>
-						<li><a href="/surveillance-cameras.html"><span class="surveillance-title"></span></a></li>
-						<li><a href="/audio-and-video.html"><span class="audio-title"></span></a></li>
-						<li><a href="/automation.html"><span class="automation-title"></span></a></li>
+						<li><a href="#" class="menu-link item-it-services"><span class="it-services-title"></span></a></li>
+						<li><a href="#" class="menu-link item-networking"><span class="networking-title"></span></a></li>
+						<li><a href="#" class="menu-link item-surveillance"><span class="surveillance-title"></span></a></li>
+						<li><a href="#" class="menu-link item-audio"><span class="audio-title"></span></a></li>
+						<li><a href="#" class="menu-link item-automation"><span class="automation-title"></span></a></li>
 					</ul>
 				</div>
 				<div class="col-xs-4">
