--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -50,7 +50,7 @@
 			  <li class="gadget-dropdown-menu-contact">
 			  	<span>Contact</span>
 			  	<ul>
-			  		<li><span><i class="fa fa-envelope"></i></span></li>
+			  		<li><span><a href="mailto:carlosreyes@gadget-technology.com"><i class="fa fa-envelope"></a></i></span></li>
 			  		<li><span><i class="fa fa-mobile"></i></span></li>
 			  		<li><span><i class="fa fa-inbox"></i></span></li>
 		  		</ul>
