--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -92,6 +92,10 @@ $boxPadding: 5% 2.5% 2% 2.5%;
 	.info {
 		background-color: #6A499C;
 		color: white;
+		a {
+			text-decoration : none;
+			color : white;
+		}
 	}
 }
 
@@ -110,6 +114,10 @@ $boxPadding: 5% 2.5% 2% 2.5%;
 	.info {
 		background-color: #297C98;
 		color: white;
+		a {
+			text-decoration : none;
+			color : white;
+		}
 	}
 }
 
@@ -129,6 +137,10 @@ $boxPadding: 5% 2.5% 2% 2.5%;
 	.info {
 		background-color: #ECAF27;
 		color: white;
+		a {
+			text-decoration : none;
+			color : white;
+		}
 	}
 }
 
@@ -148,6 +160,10 @@ $boxPadding: 5% 2.5% 2% 2.5%;
 	.info {
 		background-color: #B2D46B;
 		color: #548041;
+		a {
+			text-decoration : none;
+			color : #548041;
+		}
 	}
 }
 
@@ -166,6 +182,10 @@ $boxPadding: 5% 2.5% 2% 2.5%;
 	.info {
 		background-color: #58595B;
 		color: white;
+		a {
+			text-decoration : none;
+			color : white;
+		}
 	}
 }
 
