scroll al footer desde el boton de contacto

--- a/app/layout/_header.html
+++ b/app/layout/_header.html
@@ -51,8 +51,8 @@
 			  	<span>Contact</span>
 			  	<ul>
 			  		<li><span><a href="mailto:carlosreyes@gadget-technology.com"><i class="fa fa-envelope"></a></i></span></li>
-			  		<li><span><i class="fa fa-mobile"></i></span></li>
-			  		<li><span><i class="fa fa-inbox"></i></span></li>
+			  		<li><span><i class="fa fa-mobile contact-link"></i></span></li>
+			  		<li><span><i class="fa fa-inbox contact-link"></i></span></li>
 		  		</ul>
 			  </li>
 			</ul>
